--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -2,3 +2,5 @@
 #spring.datasource.username=
 #spring.datasource.password=
 #spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
